--- a/app/src/main/res/layout/activity_add_grocery.xml
+++ b/app/src/main/res/layout/activity_add_grocery.xml
@@ -6,83 +6,108 @@
     android:layout_height="match_parent"
     android:orientation = "vertical"
     android:gravity = "center"
+    android:background="@drawable/wallpaper"
     tools:context=".addGrocery">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/round_edittext">
-    </LinearLayout>
-
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="90dp"
+        android:layout_height="60dp"
         android:layout_weight="1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/image_view"
-        android:src="@drawable/ic_grocery_name"/>
+        android:background="@drawable/round_edittext"
+        android:src="@drawable/image"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:padding="10dp"
         android:gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_edittext">
         <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:ems="10"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/name"
+            android:drawablePadding="12dp"
             android:id="@+id/et_grocery_name"
-            android:hint="Product Name:"/>
+            android:hint="Product Name:" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:padding="10dp"
         android:gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_edittext">
         <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:ems="10"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/type"
+            android:drawablePadding="12dp"
             android:id="@+id/et_type"
             android:hint="Type of Product:"/>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:padding="10dp"
         android:gravity="center"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_edittext">
         <EditText
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:ems="10"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:drawableStart="@drawable/quantity"
+            android:drawablePadding="12dp"
             android:id="@+id/et_quantity"
+
             android:hint="Quantity:"/>
     </LinearLayout>
 
     <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:textSize="14sp"
+        android:layout_marginTop="30dp"
+        android:drawableStart="@drawable/date"
+        android:drawablePadding="12dp"
         android:padding="10dp"
         android:gravity="center"
-        android:layout_marginTop="30dp"
         android:background="@drawable/round_edittext"
         android:hint="Select Expiry Date:"
         android:id="@+id/et_expdate">
     </TextView>
 
     <Button
+        android:id="@+id/et_store"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:id="@+id/et_store"
-        android:hint="Add Item"/>
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:text="Add Item"
+        android:textSize="14sp"/>
+
+    <Button
+        android:id="@+id/et_cancel"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:text="Cancel"/>
 
 </LinearLayout>
