--- a/app/src/main/res/layout/activity_list_grocery.xml
+++ b/app/src/main/res/layout/activity_list_grocery.xml
@@ -1,15 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper">
+
+
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="right"
     tools:context=".listGrocery">
 
-    <ListView
+        <Button
+            android:id="@+id/et_home"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Home"
+            android:layout_marginTop="30dp"
+             />
+
+        <Button
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:clickable="true"
+            android:text="Add New" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/text1"/>
+        android:layout_height="wrap_content" />
 
 
-</LinearLayout>
+
+    </LinearLayout>
+
+
+</ScrollView>
